--- a/index.html
+++ b/index.html
@@ -14,21 +14,46 @@
       position: relative;
       font-family: Arial, sans-serif;
     }
-    /* Tekst i bunden */
-    .bottom-text {
+    .bottom-container {
       position: fixed;
       bottom: 20px;
       width: 100%;
       text-align: center;
       color: white;
-      font-size: 2rem;
-      text-shadow: 0 0 5px rgba(0,0,0,0.7);
       user-select: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      text-shadow: 0 0 5px rgba(0,0,0,0.7);
+    }
+    .bottom-text {
+      font-size: 2rem;
+    }
+    button {
+      padding: 10px 25px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 8px;
+      background-color: #ff4081;
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(255, 64, 129, 0.6);
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+    button:hover {
+      background-color: #e73370;
+      transform: scale(1.05);
+    }
+    button:active {
+      transform: scale(0.95);
     }
   </style>
 </head>
 <body>
-  <div class="bottom-text">Miss me?</div>
+  <div class="bottom-container">
+    <div class="bottom-text">Miss me?</div>
+    <button>Bring me back!</button>
+  </div>
 </body>
 </html>
-
