--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
   <div class="bottom-container">
     <div class="bottom-text">Miss me?</div>
-    <button>Bring me back!</button>
+    <button onclick="window.location.href='clip-start.html'">Bring me back!</button>
   </div>
 </body>
 </html>
