--- a/me.html
+++ b/me.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>📎📎📎</title>
+  <style>
+    html, body {
+      margin: 0; padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 0;
+    }
 
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      user-select: none;
+    }
+  </style>
+</head>
+<body>
+  <img src="clip1.gif" alt="Clip 1" />
+  <img src="clip2.gif" alt="Clip 2" />
+  <img src="clip3.gif" alt="Clip 3" />
+  <img src="clip4.gif" alt="Clip 4" />
+</body>
+</html>
